ie9-10 on paste html data

--- a/examples/index.html
+++ b/examples/index.html
@@ -22,7 +22,7 @@
       height: 302px;
       /* width: 600px; */
     }
-    
+
     .pmr-size {
       margin-bottom: 20px;
     }
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div class="demo-container">
-    <div class="proseMirror-container">
+    <section class="proseMirror-container">
       <div class="hide"><textarea class="pmr-editor__values" name=""></textarea></div>
 
       <section class="pmr-editor">
@@ -70,15 +70,40 @@
 
       <section class="hide pmr-editor__content">
         <h3>Simple editor</h3>
-        <p>With a very crude menu bar.<img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/angrya_thumb.gif" alt="[怒]"></p>
+        <p>With a very crude menu bar.<img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif"
+            alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/laugh.gif" alt="[哈哈]"><img src="https://web.rrzuzu.com/WebStatic/mjsuo/emotions/angrya_thumb.gif"
+            alt="[怒]"></p>
         <p>
           <del>deldele</del>
           <ins>insinsinsins</ins>
           <span style="text-decoration: line-through;">text-decoration: line-through;</span>
-          <s>ssssssssssss</s>
+          <s>sss</s>
         </p>
       </section>
-    </div>
+    </section>
 
     <div><input type="text" value=""></div>
   </div>
@@ -86,7 +111,7 @@
   <div><hr></div>
   
   <div class="demo-container">
-    <div class="proseMirror-container">
+    <section class="proseMirror-container">
       <div class="hide"><textarea class="pmr-editor__values" name=""></textarea></div>
 
       <section class="pmr-editor" style="width: 600px;">
@@ -124,7 +149,7 @@
         <p><a href="222222">222222222</a></p>
         <p><a href="222222">222222222</a><br></p>
       </section>
-    </div>
+    </section>
   </div>
 
   <div class="demo-container">
@@ -192,28 +217,23 @@
       // 这里限制 section标签布局，有时候内容 div标签没有结束标签，导致页面布局错乱
       var selector = 'section.pmr-editor';
       var proseMirrors = document.querySelectorAll('.proseMirror-container');
-      var PMR = window.PMR;
+      var OUVI = window.OUVI;
 
       proseMirrors.forEach(function (elem) {
-        var target = elem.querySelector(selector);
-        var content = elem.querySelector(selector + '__content');
-        var textarea = elem.querySelector('.pmr-editor__values');
-        var size = elem.querySelector(selector + '__size');
-
         if (!elem.pmview) {
-          elem.pmview = new PMR.OutletView({
-            target: target,
-            content: content,
-            textarea: textarea,
-            size: size,
-            notLimit: false,
+          elem.pmview = new OUVI.OutletView({
+            $target: elem.querySelector(selector),
+            $content: elem.querySelector(selector + '__content'),
+            $textarea: elem.querySelector('.pmr-editor__values'),
+            $size: elem.querySelector(selector + '__size'),
+            // disableLimit: false,
             alert: function (msg) {
               window.alert(msg);
             }
           });
         }
       });
-    })();
+    }());
   </script>
 </body>
 </html>
